--- a/fish.html
+++ b/fish.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About || Starter</title>
+    <title>Fish|| Starter</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="./assets/favicon1.ico" type="image/x-icon" />
     <!-- normalize -->
@@ -42,49 +42,43 @@
     </nav>
     <!-- end of nav -->
     <main class="page">
-        <section class="about-page">
-            <article>
-                <h2>Let's Cook Together</h2>
-                <p>
-                    My pastime is cooking, and it has been for a while. There are so many reasons why I love to cook; it's one of those things that simply comes effortlessly to me. I also believe I inherited it since, like my grandmother, I can make practically everything perfectly the first time. 
-                </p>
-                <p>
-                    However, the major reason I enjoy cooking is that it helps me to decompress. For instance, I don't have much time to ponder when I'm cooking since it challenges my brain and distracts me from the stresses of daily life.
-                </p>
-                <a href="contact.html" class="btn"> contact </a>
-            </article>
-            <!-- needs fixes -->
-            <img src="./assets/about.jpeg" alt="Person Pouring Salt in Bowl" class="img about-img" />
-        </section>
-        <section class="featured-recipes">
-            <h5 class="featured-title">Look At This Awesomesouce!</h5>
-            <div class="recipes-list">
+        <div class="featured-recipes">
+            <h4>Fish</h4>
+            <!--recipes list-->
+            <div class=" recipes-list ">
                 <!--single recipes-->
                 <a href="single-recipe.html" class="recipe">
-                    <img src="./assets/recipes/puttu kadala.jpeg" class="img recipe-img" alt="" />
-                    <h5>Puttu Kadala with Pappadam</h5>
-                    <p>Prep:30min |Cook:15min
+                    <img src="./assets/recipes/prwans biriyani.jpeg" class="img recipe-img" alt="" />
+                    <h5>Prawns Biriyani
+                    </h5>
+                    <p>Prep:1hr |Cook:15min
                     </p>
                 </a>
                 <!--end of single recipes-->
                 <!--single recipes-->
                 <a href="single-recipe.html" class="recipe">
-                    <img src="./assets/recipes/grillchicken.jpeg" class="img recipe-img" alt="" />
-                    <h5>Grill Chicken</h5>
+                    <img src="./assets/recipes/fish fillet.jpeg" class="img recipe-img" alt="" />
+                    <h5>Fish Fillet</h5>
                     <p>Prep:30min |Cook:15min
                     </p>
-                    <!--single recipes-->
-                    <a href="single-recipe.html" class="recipe">
-                        <img src="./assets/recipes/fish fillet.jpeg" class="img recipe-img" alt="" />
-                        <h5>Fish Fillet</h5>
-                        <p>Prep:30min |Cook:15min
-                        </p>
-                    </a>
-                    <!--end of single recipes-->
+                </a>
+                <!--end of single recipes-->
+            <!--single recipes-->
+            <a href="single-recipe.html" class="recipe">
+                <img src="./assets/recipes/fish biriyani.jpeg" class="img recipe-img" alt="" />
+                <h5>Fish Biriyani
+                </h5>
+                <p>Prep:1hr |Cook:15min
+                </p>
+            </a>
+            <!--end of single recipes-->
+           
             </div>
-        </section>
-    </main>
+            <!--end of recipes list-->
 
+        </div>
+
+    </main>
     <!-- footer -->
     <!--footer-->
     <footer class="page-footer ">
