--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
             <div class="tags-container">
                 <h4>Recipes</h4>
                 <div class="tags-list">
-                    <a href="tag-template.html">Chicken (1)</a>
-                    <a href="tag-template.html">breakfast (2)</a>
-                    <a href="tag-template.html">Biriyani (3)</a>
-                    <a href="tag-template.html">Food (4)</a>
+                    <a href="nonveg.html">Non Veg (3)</a>
+                    <a href="breakfast.html">breakfast (2)</a>
+                    <a href="biriyani.html">Biriyani (5)</a>
+                    <a href="other.html">Other (4)</a>
                 </div>
             </div>
             <!--end of tags container-->
@@ -80,7 +80,7 @@
                 <a href="single-recipe.html" class="recipe">
                     <img src="./assets/recipes/grillchicken.jpeg" class="img recipe-img" alt="" />
                     <h5>Grill Chicken</h5>
-                    <p>Prep:30min |Cook:15min
+                    <p>Prep:1hr |Cook:15min
                     </p>
                     <!--single recipes-->
                     <a href="single-recipe.html" class="recipe">
@@ -95,32 +95,32 @@
                         <img src="./assets/recipes/thalassery biriyani.jpeg" class="img recipe-img" alt="" />
                         <h5>Thalassery Biriyani
                         </h5>
-                        <p>Prep:30min |Cook:15min
+                        <p>Prep:1hr 30min |Cook:15min
                         </p>
                     </a>
                     <!--end of single recipes-->
                     <!--single recipes-->
                     <a href="single-recipe.html" class="recipe">
                         <img src="./assets/recipes/prwans biriyani.jpeg" class="img recipe-img" alt="" />
-                        <h5>Thalassery Biriyani
+                        <h5>Prawns Biriyani
                         </h5>
-                        <p>Prep:30min |Cook:15min
+                        <p>Prep:1hr |Cook:15min
                         </p>
                     </a>
                     <!--end of single recipes-->
                     <!--single recipes-->
                     <a href="single-recipe.html" class="recipe">
                         <img src="./assets/recipes/hyderabadi biriyani.jpeg" class="img recipe-img" alt="" />
-                        <h5>Thalassery Biriyani
+                        <h5>Hyderabadi Biriyani
                         </h5>
-                        <p>Prep:30min |Cook:15min
+                        <p>Prep:45min |Cook:15min
                         </p>
                     </a>
                     <!--end of single recipes-->
                     <!--single recipes-->
                     <a href="single-recipe.html" class="recipe">
                         <img src="./assets/recipes/idli.jpeg" class="img recipe-img" alt="" />
-                        <h5>Thalassery Biriyani
+                        <h5>Idli and Sambar
                         </h5>
                         <p>Prep:30min |Cook:15min
                         </p>
@@ -129,25 +129,25 @@
                     <!--single recipes-->
                     <a href="single-recipe.html" class="recipe">
                         <img src="./assets/recipes/chammanthi.jpeg" class="img recipe-img" alt="" />
-                        <h5>Thalassery Biriyani
+                        <h5>Kerala Chammanthi
                         </h5>
-                        <p>Prep:30min |Cook:15min
+                        <p>Prep:5min |Cook:15min
                         </p>
                     </a>
                     <!--end of single recipes-->
                     <!--single recipes-->
                     <a href="single-recipe.html" class="recipe">
                         <img src="./assets/recipes/chicken chukka.jpeg" class="img recipe-img" alt="" />
-                        <h5>Thalassery Biriyani
+                        <h5>Chicken Chukka
                         </h5>
-                        <p>Prep:30min |Cook:15min
+                        <p>Prep:45min |Cook:15min
                         </p>
                     </a>
                     <!--end of single recipes-->
                     <!--single recipes-->
                     <a href="single-recipe.html" class="recipe">
                         <img src="./assets/recipes/pasta.jpeg" class="img recipe-img" alt="" />
-                        <h5>Thalassery Biriyani
+                        <h5>Mixed Pasta
                         </h5>
                         <p>Prep:30min |Cook:15min
                         </p>
@@ -156,45 +156,45 @@
                     <!--single recipes-->
                     <a href="single-recipe.html" class="recipe">
                         <img src="./assets/recipes/marble cake.jpeg" class="img recipe-img" alt="" />
-                        <h5>Thalassery Biriyani
+                        <h5>Marble Cake
                         </h5>
-                        <p>Prep:30min |Cook:15min
+                        <p>Prep:50min |Cook:15min
                         </p>
                     </a>
                     <!--end of single recipes-->
                     <!--single recipes-->
                     <a href="single-recipe.html" class="recipe">
                         <img src="./assets/recipes/mutta burji.jpeg" class="img recipe-img" alt="" />
-                        <h5>Thalassery Biriyani
+                        <h5>Egg Baji
                         </h5>
-                        <p>Prep:30min |Cook:15min
+                        <p>Prep:20min |Cook:15min
                         </p>
                     </a>
                     <!--end of single recipes-->
                     <!--single recipes-->
                     <a href="single-recipe.html" class="recipe">
                         <img src="./assets/recipes/fish biriyani.jpeg" class="img recipe-img" alt="" />
-                        <h5>Thalassery Biriyani
+                        <h5>Fish Biriyani
                         </h5>
-                        <p>Prep:30min |Cook:15min
+                        <p>Prep:1hr |Cook:15min
                         </p>
                     </a>
                     <!--end of single recipes-->
                     <!--single recipes-->
                     <a href="single-recipe.html" class="recipe">
                         <img src="./assets/recipes/fried rice.jpeg" class="img recipe-img" alt="" />
-                        <h5>Thalassery Biriyani
+                        <h5>Fried Rice
                         </h5>
-                        <p>Prep:30min |Cook:15min
+                        <p>Prep:35min |Cook:15min
                         </p>
                     </a>
                     <!--end of single recipes-->
                     <!--single recipes-->
                     <a href="single-recipe.html" class="recipe">
                         <img src="./assets/recipes/egg biriyani.jpeg" class="img recipe-img" alt="" />
-                        <h5>Thalassery Biriyani
+                        <h5>Egg Biriyani
                         </h5>
-                        <p>Prep:30min |Cook:15min
+                        <p>Prep:45min |Cook:15min
                         </p>
                     </a>
                     <!--end of single recipes-->
