--- a/tags.html
+++ b/tags.html
@@ -43,33 +43,33 @@
     <main class="page">
         <section class="tags-wrapper">
             <!--Single tag-->
-            <a href="tag-template.html" class="tag">
-                <h5>Beef</h5>
-                <p>1 recipe</p>
+            <a href="breakfast.html" class="tag">
+                <h5>Breakfast</h5>
+                <p>2 recipe</p>
             </a>
             <!--End of single tag-->
             <!--Single tag-->
-            <a href="tag-template.html" class="tag">
-                <h5>Beef</h5>
-                <p>1 recipe</p>
+            <a href="biriyani.html" class="tag">
+                <h5>Biriyani</h5>
+                <p>5 recipe</p>
             </a>
             <!--End of single tag-->
             <!--Single tag-->
-            <a href="tag-template.html" class="tag">
-                <h5>Beef</h5>
-                <p>1 recipe</p>
+            <a href="chicken.html" class="tag">
+                <h5>Chicken</h5>
+                <p>6 recipe</p>
                 <!--End of single tag-->
             </a>
             <!--Single tag-->
-            <a href="tag-template.html" class="tag">
-                <h5>Beef</h5>
-                <p>1 recipe</p>
+            <a href="fish.html" class="tag">
+                <h5>Fish</h5>
+                <p>3 recipe</p>
             </a>
             <!--End of single tag-->
             <!--Single tag-->
-            <a href="tag-template.html" class="tag">
-                <h5>Beef</h5>
-                <p>1 recipe</p>
+            <a href="egg.html" class="tag">
+                <h5>Egg</h5>
+                <p>3 recipe</p>
             </a>
             <!--End of single tag-->
         </section>
